create dynamic page transitions

--- a/client/src/block-link/BlockLink.styl
+++ b/client/src/block-link/BlockLink.styl
@@ -7,6 +7,7 @@
       color: red
     label
       cursor: pointer
+      letter-spacing: 5px
     :nth-child(1)
       transform-origin: bottom
       transform: rotate3d(1,0,0,90deg)
