--- a/client/src/layout/Menubar.styl
+++ b/client/src/layout/Menubar.styl
@@ -11,7 +11,14 @@
   top: 0
   border-right: 2px solid black
   background: white
+  z-index: 1
   label
     display: inline-block
   a
     margin: 10px 0
+  h3
+    text-align: right
+    letter-spacing: 5px
+  .block-links
+    padding: 40px
+    padding-top: 65px
