--- a/client/src/navbar/Navbar.styl
+++ b/client/src/navbar/Navbar.styl
@@ -2,11 +2,12 @@ transform-squash(a)
   transform: scaleY(a) scaleX(a);
 
 .navbar
-  padding: 10px
+  // padding: 10px
   border-bottom: 2px solid black
   display: flex
   justify-content: space-between
   align-items: center
+  height: 5vh
   h2
     letter-spacing: 1em
   label
