--- a/client/src/board/Board.styl
+++ b/client/src/board/Board.styl
@@ -1,11 +1,11 @@
-time = 0.7s
+time = 1s
 .board
   overflow: auto
   box-sizing: border-box
   padding: 20px
-  height: 100vh
+  height: 95vh
   position: absolute
   width: 100%
   background-color: transparent
   transition: transform time, opacity time
-  transition-timing-function: ease-in-out
+  transition-timing-function: cubic-bezier(0.455, 0.03, 0.515, 0.955)
