--- a/client/src/home/Home.styl
+++ b/client/src/home/Home.styl
@@ -1,9 +1,13 @@
-time = 0.7s
+time = 1s
+easing = cubic-bezier(0.455, 0.03, 0.515, 0.955)
 .home
   width: 100vw
-  height: 100vh
+  height: 95vh
+  background: white
+  @media all and (max-width: 800px)
+    height: auto
   transition: transform time, opacity time
-  transition-timing-function: ease-in-out
+  transition-timing-function: easing
   display: flex
   position: absolute
   // top: 0
@@ -13,7 +17,7 @@ time = 0.7s
   @media all and (max-width: 800px)
     flex-direction: column
   .section-entrance
-    transition: 0.5s ease-in-out
+    transition: time easing
     @media all and (max-width: 800px)
       height: 50%
   img
@@ -21,15 +25,17 @@ time = 0.7s
     z-index: -1
     filter: brightness(100%) contrast(100%)
     height: 250px
-    transition: 0.15s ease
+    transition: time easing
   .svg-icon
-    padding: 40px
+    padding: 40px 0
     background: white
     box-shadow: 0px 0px 25px 10px rgba(255,255,255,1)
     fill: none
     stroke: grey
     stroke-width: 20
+    z-index: 2
     @media all and (max-width: 800px)
+      padding: 40px
       box-shadow: none
       background: #927a7a
       stroke: white
@@ -44,21 +50,26 @@ time = 0.7s
     @media all and (max-width: 800px)
       width: 100%
   > :nth-child(2)
-    border-right: 1px solid black
+  > :nth-child(4)
+    border-right: 2px solid black
     @media all and (max-width: 800px)
-      border-right: none
-      border-bottom: 1px solid black
+      margin: 10% 0
+      border: none
   > :nth-child(3)
-    border-left: 1px solid black
+  > :nth-child(5)
+    border-right: 2px solid black
     @media all and (max-width: 800px)
-      border-right: none
-      border-bottom: 1px solid black
+      margin: 10% 0
+      border: none
   > span > .board-link
     display: flex
-    width: 50%
+    width: 75%
+    position: relative
     justify-content: center
     align-items: center
     cursor: pointer
+    transition: 1s easing
+    z-index: 3
     :nth-child(1)
       transform: translate3d(0,10px,20px) rotate3d(1,0,0,90deg)
       transform-origin: bottom
@@ -67,10 +78,12 @@ time = 0.7s
       transform: translate3d(0,0,20px) rotate3d(1,0,0,0deg)
       transform-origin: bottom
     label
-      font-size: 2em
-      transition: 0.5s ease
+      font-size: 1.5em
+      transition: 0.2s ease-in-out
       display: block
       position: absolute
+      width: 50%
+      text-align: center
       cursor: pointer
       color: white
   .board-link:hover :nth-child(1)
