--- a/client/src/styl/animations/reveal.styl
+++ b/client/src/styl/animations/reveal.styl
@@ -7,8 +7,6 @@
 
 @keyframes reveal
   0%
-    transform: translate3d(0, -10vh,0)
-    opacity: 0
+    transform: translate3d(0, 0, 0)
   100%
-    transform: translate3d(0, 0,0)
-    opacity: 1
+    transform: translate3d(100vw, 0,0)
