--- a/client/src/board/Board.styl
+++ b/client/src/board/Board.styl
@@ -1,9 +1,10 @@
 time = 1s
+height = 91vh
 .board
   overflow: auto
   box-sizing: border-box
   padding: 20px
-  height: 95vh
+  height: height
   position: absolute
   width: 100%
   background-color: transparent
