--- a/client/src/home/Home.styl
+++ b/client/src/home/Home.styl
@@ -1,8 +1,9 @@
 time = 1s
 easing = cubic-bezier(0.455, 0.03, 0.515, 0.955)
+height = 91vh
 .home
   width: 100vw
-  height: 95vh
+  height: height
   background: white
   @media all and (max-width: 800px)
     height: auto
