--- a/client/src/navbar/Navbar.styl
+++ b/client/src/navbar/Navbar.styl
@@ -8,7 +8,9 @@ transform-squash(a)
   justify-content: space-between
   align-items: center
   height: 5vh
-  h2
+  padding: 2vh 20px
+  .navbar-title
+    font-size: 1.3em
     letter-spacing: 1em
   label
     display:block
