--- a/client/src/styl/page-transitions.styl
+++ b/client/src/styl/page-transitions.styl
@@ -1,3 +1,4 @@
+height = 91vh
 .transition-enter
   opacity: 1
   animation: reveal 1s cubic-bezier(0.455, 0.03, 0.515, 0.955) 1s
@@ -19,7 +20,7 @@
   .board-link:hover
     width: 100%
     img
-      height: 95vh
+      height: height
 
 
 .home-enter
