create perspective links

--- a/client/src/navbar/Navbar.styl
+++ b/client/src/navbar/Navbar.styl
@@ -3,7 +3,7 @@ transform-squash(a)
 
 .navbar
   // padding: 10px
-  border-bottom: 2px solid black
+  border-bottom: 2px solid white
   display: flex
   justify-content: space-between
   align-items: center
