--- a/client/src/home/Home.styl
+++ b/client/src/home/Home.styl
@@ -4,19 +4,26 @@ height = 91vh
 .home
   width: 100vw
   height: height
-  background: white
+  display: grid
+  grid-template-columns: 50% 50%
+  background: transparent
   @media all and (max-width: 800px)
     height: auto
   transition: transform time, opacity time
   transition-timing-function: easing
-  display: flex
   position: absolute
   // top: 0
-  // perspective: 1000px
+  perspective: 500px
+  perspective-origin: center
   justify-content: center
   align-items: center
   @media all and (max-width: 800px)
     flex-direction: column
+  .logo
+    position: absolute
+    width: 100%
+    height: 10%
+    object-fit: contain
   .section-entrance
     transition: time easing
     @media all and (max-width: 800px)
@@ -42,7 +49,7 @@ height = 91vh
       stroke: white
   > span
     width: 50%
-    height: 100%
+    margin: 0 auto
     display: flex
     justify-content: center
     align-items: center
@@ -52,13 +59,15 @@ height = 91vh
       width: 100%
   > :nth-child(2)
   > :nth-child(4)
-    border-right: 2px solid black
+    transform: translate3d(0,0,0px) rotate3d(0,1,0,-20deg)
+    transform-origin: bottom
     @media all and (max-width: 800px)
       margin: 10% 0
       border: none
   > :nth-child(3)
   > :nth-child(5)
-    border-right: 2px solid black
+    transform: translate3d(0,0,0px) rotate3d(0,1,0,20deg)
+    transform-origin: bottom
     @media all and (max-width: 800px)
       margin: 10% 0
       border: none
@@ -71,13 +80,13 @@ height = 91vh
     cursor: pointer
     transition: 1s easing
     z-index: 3
-    :nth-child(1)
-      transform: translate3d(0,10px,20px) rotate3d(1,0,0,90deg)
-      transform-origin: bottom
-      color: white
-    :nth-child(2)
-      transform: translate3d(0,0,20px) rotate3d(1,0,0,0deg)
-      transform-origin: bottom
+    // :nth-child(1)
+    //   transform: translate3d(0,10px,20px) rotate3d(0,1,0,90deg)
+    //   transform-origin: bottom
+    //   color: white
+    // :nth-child(2)
+    //   transform: translate3d(0,0,20px) rotate3d(0,1,0,40deg)
+    //   transform-origin: bottom
     label
       font-size: 1.5em
       transition: 0.2s ease-in-out
@@ -90,7 +99,7 @@ height = 91vh
   .board-link:hover :nth-child(1)
     transform: translate3d(0,0,20px) rotate3d(1,0,0,0deg)
   .board-link:hover :nth-child(2)
-    transform: translate3d(0,10px,20px) rotate3d(1,0,0,-180deg)
+    transform: translate3d(0,40px,20px) rotate3d(1,0,0,-180deg)
     color: #ff5c5c
   .board-link:hover > img
     filter: brightness(110%) contrast(20%)
