--- a/client/src/layout/Layout.styl
+++ b/client/src/layout/Layout.styl
@@ -1,3 +1,9 @@
 .layout
   width: 100%
   height: 100vh
+  > img
+    height: 100%
+    width: 100%
+    object-fit: cover
+    position: absolute
+    z-index: -1
